# tcosmonitor

./: AUTHORS  Changelog  INSTALL  Initialize.py  LocalData.py  Makefile  Makefile.am  Makefile.ltsp  Makefile.pxes  README  README.rsync  README.server-utils  README.standalone  TODO  TcosActions.py  TcosClassView.py  TcosCommon.py  TcosConf.py  TcosDBus.py  TcosExtensions.py  TcosIconView.py  TcosListView.py  TcosMenus.py  TcosPAM.py  TcosPreferences.py  TcosStaticHosts.py  TcosTrayIcon.py  TcosXauth.py  TcosXmlRpc.py  WakeOnLan.py  bootstrap.sh  common.mk  config.h.in  configure.ac  fix-glade.sh  htmltextview.py  ping.py  pylint.rc  setup.py  shared.py  (+20 more)
busybox/: Makefile  Makefile.am  nohup
conf/: tcos.conf
dbus/: 81tcos-dbus-client  81tcos-utils  Makefile  Makefile.am  client.py  server.py  tcos-dbus-client.1  tcos-dbus-client.py
debian/: README.Debian  changelog  control  copyright  dirs  docs  files  ltsp-tcosmonitor.install  pxes-1.0-tcosmonitor.install  pxes-1.1-tcosmonitor.install  pxes-1.2-tcosmonitor.install  rules  rules.old  tcos-standalone.default  tcos-standalone.dirs  tcos-standalone.init  tcos-standalone.install  tcos-standalone.postinst  tcos-tcosmonitor.install  tcos-tcosmonitor.manpages  tcos-tcosmonitor.postinst  tcosmonitor-common.dirs  tcosmonitor-common.docs  tcosmonitor-common.install  tcosmonitor-common.lintian-overrides  tcosmonitor-common.manpages  tcosmonitor.dirs  tcosmonitor.install  tcosmonitor.lintian-overrides  tcosmonitor.manpages  tcosmonitor.postinst  tcosmonitor.postrm  tcosmonitor.prerm
extensions/: Makefile  __init__.py  appsmsg.py  audiortp.py  clean.py  dpms.py  info.py  italc.py  lockscreen.py  logout.py  reboot.py  remotessh.py  restartxorg.py  screenshot.py  sendfiles.py  tcosnetcontroller.py  tcospersonalize.py  template.py  videolan.py  viewproc.py  vnc.py  wakeonlan.py
hooks-addons/: tcoshttpd  tcosmonitor
httpd/: system-info.tpl  webserver.sh
lockscreen/: Makefile  Makefile.am  lockscreen2.c
ltsp/: ltsp.configurexorg  ltsp.screenshots  ltsp.startxmlrpc  ltsp.which.sh
man/: tcos-dbus-client.1  tcos-devices-ng.1  tcos-devices.1  tcos-server-utils.1  tcos-volume-manager.1  tcosmonitor.1  tcospersonalize.1
op.d/: nmap-tcos.conf
po/: FILES  Makefile  ca.po  ca@valencia.po  es.po  fr.po  gl.po  pt_BR.po  qcv.po  tcosmonitor.pot
pxes/: pxes.configurexorg  pxes.screenshots  pxes.startxmlrpc
pyexamples/: example3.py  fork.py  implement-interface.py  merrychristmas.py  pango2.py  pango3.py  pipe.py  prueba.py  rangewidgets.py  requester.py  thread.py
server-utils/: tcos-server-utils.py
tcosmonitor/: Avahi.py  Initialize.py  LocalData.py  Sessions.py  TcosActions.py  TcosClassView.py  TcosCommon.py  TcosConf.py  TcosDBus.py  TcosExtensions.py  TcosIconView.py  TcosListView.py  TcosMenus.py  TcosMonitorDaemon.py  TcosPAM.py  TcosPreferences.py  TcosStaticHosts.py  TcosTrayIcon.py  TcosTrayIcon2.py  TcosXauth.py  TcosXmlRpc.py  WakeOnLan.py  __init__.py  counter.py  ftps_server.py  htmltextview.py  ping.py  shared.py
tcosmonitor/extensions/: Makefile  __init__.py  appsmsg.py  audiortp.py  clean.py  dpms.py  info.py  italc.py  livevnc.py  lockscreen.py  logout.py  reboot.py  remotessh.py  restartxorg.py  screenshot.py  sendfiles.py  tcosnetcontroller.py  tcospersonalize.py  videolan.py  viewproc.py  vnc.py  wakeonlan.py
udev/: 050_tcos_devices.rules  Makefile  Makefile.am  listener-daemon.sh  mount_listener.c  tcos-udevd.sh
ui/: tcos-volume-manager.ui  tcosmonitor-abouttcos.ui  tcosmonitor-askwindow.ui  tcosmonitor-chatwindow.ui  tcosmonitor-mainwindow.ui  tcosmonitor-prefwindow.ui  tcosmonitor-staticwindow.ui  tcosmonitor-staticwindownew.ui  tcospersonalize.ui  tray.ui
xmlrpc/: Makefile  Makefile.am  debug.c  devices.c  devices.h  exe.c  exe.h  hex2ascii.c  info.c  info.h  lockscreen.c  login.c  pci.c  screenshot.c  screenshot.h  sound.c  sound.h  standalone.c  standalone.h  tcospasswd.c  tcosxmlrpc.c  validate-passwd.c  validate-shadow.c  validate-tcos.c  validate.c  who.c  who.h  xauth.c  xorg.c  xorg.h
xmlrpc/man/: tcosmd5.1  tcospasswd.1  tcosxmlrpc.1  update-tcospasswd.1
xmlrpc/sh/: devicesctl.sh  getinfo.sh  restartx.sh  screenshot.sh  soundctl.sh  starthttpd.sh  tcos-dbus.py  update-tcospasswd.sh  useallmodules.sh
xmlrpc/test/: client.py
xmlrpc/var/etc/: abyss.conf
